# game-demo

./: .dockerignore  BUILD_WINDOWS.md  CMakeLists.txt  Dockerfile  Info.plist.in  LICENSE  README.md  cloudbuild.yaml  deploy.sh  package-lock.json  package.json  tankduel.desktop  tankduel.icns  tsconfig.json  tsconfig.server.json  vite.config.ts
debian/: changelog  control  rules
scripts/: build.bat  build.sh  install.sh  package.sh
src/: main.cpp
src/client/: GameRenderer.ts  InputHandler.ts  SpriteExtractor.ts  index.html  main.ts
src/server/: server.ts
src/server/game/: GameRoom.ts
src/shared/: GameLogic.ts  types.ts
windows/: tankduel.manifest  tankduel.rc
